--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "hamburgers": "^1.1.3",
     "i18next": "^15.0.6",
     "i18next-xhr-backend": "^2.0.1",
+    "ngx-image-zoom": "^0.6.0",
     "ngx-infinite-scroll": "^8.0.0",
     "rxjs": "^6.5.4",
     "ts-loader": "^6.0.4",
