--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,6 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "aot": true,
             "outputPath": "dist/storefrontapp",
             "index": "projects/storefrontapp/src/index.html",
             "main": "projects/storefrontapp/src/main.ts",
@@ -25,26 +24,15 @@
               "projects/storefrontapp/src/manifest.json",
               "projects/storefrontapp/src/webApplicationInjector.js"
             ],
-            "styles": [
-              "projects/storefrontapp/src/styles.scss"
-            ],
+            "styles": ["projects/storefrontapp/src/styles.scss"],
             "stylePreprocessorOptions": {
-              "includePaths": [
-                "./projects",
-                "./projects/storefrontstyles/scss"
-              ]
+              "includePaths": ["./projects", "./projects/storefrontstyles/scss"]
             },
             "ngswConfigPath": "projects/storefrontlib/src/cms-structure/pwa/ngsw-config.json",
             "scripts": []
           },
           "configurations": {
             "production": {
-              "budgets": [
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "6kb"
-                }
-              ],
               "fileReplacements": [
                 {
                   "replace": "projects/storefrontapp/src/environments/environment.ts",
@@ -64,12 +52,6 @@
               "tsConfig": "projects/storefrontapp/tsconfig.app.prod.json"
             },
             "ci": {
-              "budgets": [
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "6kb"
-                }
-              ],
               "fileReplacements": [
                 {
                   "replace": "projects/storefrontapp/src/environments/environment.ts",
@@ -88,12 +70,6 @@
               "tsConfig": "projects/storefrontapp/tsconfig.app.prod.json"
             },
             "qa": {
-              "budgets": [
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "6kb"
-                }
-              ],
               "fileReplacements": [
                 {
                   "replace": "projects/storefrontapp/src/environments/environment.ts",
@@ -147,18 +123,14 @@
             "polyfills": "projects/storefrontapp/src/polyfills.ts",
             "tsConfig": "projects/storefrontapp/tsconfig.spec.json",
             "karmaConfig": "projects/storefrontapp/karma.conf.js",
-            "styles": [
-              "projects/storefrontapp/src/styles.scss"
-            ],
+            "styles": ["projects/storefrontapp/src/styles.scss"],
             "scripts": [],
             "assets": [
               "projects/storefrontapp/src/favicon.ico",
               "projects/storefrontapp/src/assets",
               "projects/storefrontapp/src/manifest.json"
             ],
-            "codeCoverageExclude": [
-              "dist/**/*"
-            ]
+            "codeCoverageExclude": ["dist/**/*"]
           }
         },
         "lint": {
@@ -168,57 +140,21 @@
               "projects/storefrontapp/tsconfig.app.json",
               "projects/storefrontapp/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
           }
         },
         "server": {
           "builder": "@angular-devkit/build-angular:server",
           "options": {
             "outputPath": "dist/storefrontapp-server",
-            "main": "projects/storefrontapp/server.ts",
-            "tsConfig": "projects/storefrontapp/tsconfig.server.json"
-          },
-          "configurations": {
-            "production": {
-              "outputHashing": "media",
-              "fileReplacements": [
-                {
-                  "replace": "projects/storefrontapp/src/environments/environment.ts",
-                  "with": "projects/storefrontapp/src/environments/environment.prod.ts"
-                }
-              ],
-              "sourceMap": false,
-              "optimization": true,
-              "tsConfig": "projects/storefrontapp/tsconfig.server.prod.json"
-            }
-          }
-        },
-        "serve-ssr": {
-          "builder": "@nguniversal/builders:ssr-dev-server",
-          "options": {
-            "browserTarget": "storefrontapp:build",
-            "serverTarget": "storefrontapp:server"
-          },
-          "configurations": {
-            "production": {
-              "browserTarget": "storefrontapp:build:production",
-              "serverTarget": "storefrontapp:server:production"
-            }
-          }
-        },
-        "prerender": {
-          "builder": "@nguniversal/builders:prerender",
-          "options": {
-            "browserTarget": "storefrontapp:build:production",
-            "serverTarget": "storefrontapp:server:production",
-            "routes": [
-              "/"
+            "main": "projects/storefrontapp/src/main.server.ts",
+            "tsConfig": "projects/storefrontapp/tsconfig.server.json",
+            "fileReplacements": [
+              {
+                "replace": "projects/storefrontapp/src/environments/environment.ts",
+                "with": "projects/storefrontapp/src/environments/environment.prod.ts"
+              }
             ]
-          },
-          "configurations": {
-            "production": {}
           }
         }
       }
@@ -234,11 +170,6 @@
           "options": {
             "tsConfig": "projects/storefrontlib/tsconfig.lib.json",
             "project": "projects/storefrontlib/ng-package.json"
-          },
-          "configurations": {
-            "production": {
-              "tsConfig": "projects/storefrontlib/tsconfig.lib.prod.json"
-            }
           }
         },
         "test": {
@@ -247,13 +178,9 @@
             "main": "projects/storefrontlib/src/test.ts",
             "tsConfig": "projects/storefrontlib/tsconfig.spec.json",
             "karmaConfig": "projects/storefrontlib/karma.conf.js",
-            "codeCoverageExclude": [
-              "dist/**/*"
-            ],
+            "codeCoverageExclude": ["dist/**/*"],
             "stylePreprocessorOptions": {
-              "includePaths": [
-                "./projects/storefrontstyles/scss"
-              ]
+              "includePaths": ["./projects/storefrontstyles/scss"]
             }
           }
         },
@@ -264,9 +191,7 @@
               "projects/storefrontlib/tsconfig.lib.json",
               "projects/storefrontlib/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
@@ -282,11 +207,6 @@
           "options": {
             "tsConfig": "projects/core/tsconfig.lib.json",
             "project": "projects/core/ng-package.json"
-          },
-          "configurations": {
-            "production": {
-              "tsConfig": "projects/core/tsconfig.lib.prod.json"
-            }
           }
         },
         "test": {
@@ -304,9 +224,7 @@
               "projects/core/tsconfig.lib.json",
               "projects/core/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
@@ -322,11 +240,6 @@
           "options": {
             "tsConfig": "projects/vendor/tsconfig.lib.json",
             "project": "projects/vendor/ng-package.json"
-          },
-          "configurations": {
-            "production": {
-              "tsConfig": "projects/vendor/tsconfig.lib.prod.json"
-            }
           }
         },
         "test": {
@@ -344,9 +257,7 @@
               "projects/vendor/tsconfig.lib.json",
               "projects/vendor/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
@@ -362,11 +273,6 @@
           "options": {
             "tsConfig": "projects/assets/tsconfig.lib.json",
             "project": "projects/assets/ng-package.json"
-          },
-          "configurations": {
-            "production": {
-              "tsConfig": "projects/assets/tsconfig.lib.prod.json"
-            }
           }
         },
         "test": {
@@ -384,9 +290,7 @@
               "projects/assets/tsconfig.lib.json",
               "projects/assets/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
@@ -402,11 +306,6 @@
           "options": {
             "tsConfig": "projects/incubator/tsconfig.lib.json",
             "project": "projects/incubator/ng-package.json"
-          },
-          "configurations": {
-            "production": {
-              "tsConfig": "projects/incubator/tsconfig.lib.prod.json"
-            }
           }
         },
         "test": {
@@ -424,9 +323,7 @@
               "projects/incubator/tsconfig.lib.json",
               "projects/incubator/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
@@ -442,11 +339,6 @@
           "options": {
             "tsConfig": "projects/cds/tsconfig.lib.json",
             "project": "projects/cds/ng-package.json"
-          },
-          "configurations": {
-            "production": {
-              "tsConfig": "projects/cds/tsconfig.lib.prod.json"
-            }
           }
         },
         "test": {
@@ -464,9 +356,7 @@
               "projects/cds/tsconfig.lib.json",
               "projects/cds/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
@@ -481,7 +371,6 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "aot": true,
             "outputPath": "dist/storefrontapp-cds-integration",
             "index": "projects/storefrontapp-cds-integration/src/index.html",
             "main": "projects/storefrontapp-cds-integration/src/main.ts",
@@ -497,22 +386,13 @@
               "projects/storefrontapp-cds-integration/src/styles.scss"
             ],
             "stylePreprocessorOptions": {
-              "includePaths": [
-                "./projects",
-                "./projects/storefrontstyles/scss"
-              ]
+              "includePaths": ["./projects", "./projects/storefrontstyles/scss"]
             },
             "ngswConfigPath": "projects/storefrontlib/src/cms-structure/pwa/ngsw-config.json",
             "scripts": []
           },
           "configurations": {
             "production": {
-              "budgets": [
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "6kb"
-                }
-              ],
               "fileReplacements": [
                 {
                   "replace": "projects/storefrontapp-cds-integration/src/environments/environment.ts",
@@ -532,12 +412,6 @@
               "tsConfig": "projects/storefrontapp-cds-integration/tsconfig.app.prod.json"
             },
             "ci": {
-              "budgets": [
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "6kb"
-                }
-              ],
               "fileReplacements": [
                 {
                   "replace": "projects/storefrontapp-cds-integration/src/environments/environment.ts",
@@ -556,12 +430,6 @@
               "tsConfig": "projects/storefrontapp-cds-integration/tsconfig.app.prod.json"
             },
             "qa": {
-              "budgets": [
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "6kb"
-                }
-              ],
               "fileReplacements": [
                 {
                   "replace": "projects/storefrontapp-cds-integration/src/environments/environment.ts",
@@ -624,9 +492,7 @@
               "projects/storefrontapp-cds-integration/src/assets",
               "projects/storefrontapp-cds-integration/src/manifest.json"
             ],
-            "codeCoverageExclude": [
-              "dist/**/*"
-            ]
+            "codeCoverageExclude": ["dist/**/*"]
           }
         },
         "lint": {
@@ -636,64 +502,25 @@
               "projects/storefrontapp-cds-integration/tsconfig.app.json",
               "projects/storefrontapp-cds-integration/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
           }
         },
         "server": {
           "builder": "@angular-devkit/build-angular:server",
           "options": {
             "outputPath": "dist/storefrontapp-cds-integration-server",
-            "main": "projects/storefrontapp-cds-integration/server.ts",
-            "tsConfig": "projects/storefrontapp-cds-integration/tsconfig.server.json"
-          },
-          "configurations": {
-            "production": {
-              "outputHashing": "media",
-              "fileReplacements": [
-                {
-                  "replace": "projects/storefrontapp-cds-integration/src/environments/environment.ts",
-                  "with": "projects/storefrontapp-cds-integration/src/environments/environment.prod.ts"
-                }
-              ],
-              "sourceMap": false,
-              "optimization": true,
-              "tsConfig": "projects/storefrontapp-cds-integration/tsconfig.server.prod.json"
-            }
-          }
-        },
-        "serve-ssr": {
-          "builder": "@nguniversal/builders:ssr-dev-server",
-          "options": {
-            "browserTarget": "storefrontapp-cds-integration:build",
-            "serverTarget": "storefrontapp-cds-integration:server"
-          },
-          "configurations": {
-            "production": {
-              "browserTarget": "storefrontapp-cds-integration:build:production",
-              "serverTarget": "storefrontapp-cds-integration:server:production"
-            }
-          }
-        },
-        "prerender": {
-          "builder": "@nguniversal/builders:prerender",
-          "options": {
-            "browserTarget": "storefrontapp-cds-integration:build:production",
-            "serverTarget": "storefrontapp-cds-integration:server:production",
-            "routes": [
-              "/"
+            "main": "projects/storefrontapp-cds-integration/src/main.server.ts",
+            "tsConfig": "projects/storefrontapp-cds-integration/tsconfig.server.json",
+            "fileReplacements": [
+              {
+                "replace": "projects/storefrontapp-cds-integration/src/environments/environment.ts",
+                "with": "projects/storefrontapp-cds-integration/src/environments/environment.prod.ts"
+              }
             ]
-          },
-          "configurations": {
-            "production": {}
           }
         }
       }
     }
   },
-  "defaultProject": "storefrontapp",
-  "cli": {
-    "analytics": "e1f13c57-7cbd-4f61-92df-aa239055e493"
-  }
+  "defaultProject": "storefrontapp"
 }
